initial integration of highcharts

--- a/nano/static/css/nano/sass/_invoice.scss
+++ b/nano/static/css/nano/sass/_invoice.scss
@@ -10,6 +10,13 @@
   .col {
     width: 160px;
   }
+  .total { 
+    font-weight: bold; 
+  }
+  .currency-code {
+    font-weight: bold;
+    color: #999;
+  }
 }
 
 // -- Main invoice editing page
