--- a/nano/static/css/nano/sass/screen.scss
+++ b/nano/static/css/nano/sass/screen.scss
@@ -16,6 +16,7 @@
 @import "flash";
 @import "invoice";
 @import "popup";
+@import "dashboard";
 
 @import "invoice_themes/default";
 @import "vendor/vendor";
