--- a/nano/static/js/app/templates/new_invoice_item.html
+++ b/nano/static/js/app/templates/new_invoice_item.html
@@ -31,7 +31,7 @@
 
       <div class="field" id="price-row">
         <label>Unit Price (£)</label>
-        <input id="price" type="text" name="price" />
+        <input id="price" type="text" name="price" value="0.0" />
       </div>
       
       <% if (App.taxRates.length > 0) { %>
