--- a/nano/static/css/nano/sass/_shared.scss
+++ b/nano/static/css/nano/sass/_shared.scss
@@ -110,26 +110,29 @@ h1 {
   }
 }
 
-span.label {
+.label {
+  border-radius: 3px 3px 3px 3px;
+}
+
+.label {
+  background-color: #999999;
   color: #FFFFFF;
   display: inline-block;
-  font-size: 11.844px;
   font-weight: bold;
-  line-height: 14px;
   padding: 2px 4px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   vertical-align: baseline;
   white-space: nowrap;
 }
 
-.label-success, .badge-success {
+.label-success, .label-paid {
   background-color: #468847;
 }
 
-.label-important, .badge-important {
+.label-important, .label-overdue {
   background-color: #B94A48;
 }
 
-.label-info, .badge-info {
+.label-info, .label-sent {
   background-color: #3A87AD;
 }
