--- a/nano/static/css/nano/stylesheets/pdf.css
+++ b/nano/static/css/nano/stylesheets/pdf.css
@@ -87,7 +87,7 @@ a img {
 
 /* line 16, ../sass/_export.scss */
 h1 {
-  color: #ee3322;
+  color: #333333;
   font-size: 2.333em;
   line-height: 1.714em;
   line-height: 1em;
@@ -103,8 +103,17 @@ h1 {
 .invoice-data-list .col {
   width: 160px;
 }
-
+/* line 13, ../sass/_invoice.scss */
+.invoice-data-list .total {
+  font-weight: bold;
+}
 /* line 16, ../sass/_invoice.scss */
+.invoice-data-list .currency-code {
+  font-weight: bold;
+  color: #999;
+}
+
+/* line 23, ../sass/_invoice.scss */
 .pagestyle {
   border-top: 1px solid #CCC;
   border-left: solid 1px #CCC;
@@ -117,12 +126,12 @@ h1 {
   width: 730px;
 }
 
-/* line 28, ../sass/_invoice.scss */
+/* line 35, ../sass/_invoice.scss */
 .draft .pagestyle {
   padding-right: 1.75cm !important;
 }
 
-/* line 32, ../sass/_invoice.scss */
+/* line 39, ../sass/_invoice.scss */
 .pagestyle:after {
   content: ".";
   display: block;
@@ -132,22 +141,22 @@ h1 {
   height: 0;
 }
 
-/* line 41, ../sass/_invoice.scss */
+/* line 48, ../sass/_invoice.scss */
 html[xmlns] .pagestyle {
   display: block;
 }
 
-/* line 45, ../sass/_invoice.scss */
+/* line 52, ../sass/_invoice.scss */
 .pagestyle img {
   border: none;
 }
 
-/* line 49, ../sass/_invoice.scss */
+/* line 56, ../sass/_invoice.scss */
 #invoice {
   display: block;
   margin: 2em auto;
 }
-/* line 53, ../sass/_invoice.scss */
+/* line 60, ../sass/_invoice.scss */
 #invoice .item-controls {
   position: absolute;
   right: 10px;
