--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -214,30 +214,34 @@ h1 {
 }
 
 /* line 113, ../sass/_shared.scss */
-span.label {
+.label {
+  border-radius: 3px 3px 3px 3px;
+}
+
+/* line 117, ../sass/_shared.scss */
+.label {
+  background-color: #999999;
   color: #FFFFFF;
   display: inline-block;
-  font-size: 11.844px;
   font-weight: bold;
-  line-height: 14px;
   padding: 2px 4px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   vertical-align: baseline;
   white-space: nowrap;
 }
 
-/* line 125, ../sass/_shared.scss */
-.label-success, .badge-success {
+/* line 128, ../sass/_shared.scss */
+.label-success, .label-paid {
   background-color: #468847;
 }
 
-/* line 129, ../sass/_shared.scss */
-.label-important, .badge-important {
+/* line 132, ../sass/_shared.scss */
+.label-important, .label-overdue {
   background-color: #B94A48;
 }
 
-/* line 133, ../sass/_shared.scss */
-.label-info, .badge-info {
+/* line 136, ../sass/_shared.scss */
+.label-info, .label-sent {
   background-color: #3A87AD;
 }
 
@@ -693,8 +697,17 @@ ul.flashes {
 .invoice-data-list .col {
   width: 160px;
 }
-
+/* line 13, ../sass/_invoice.scss */
+.invoice-data-list .total {
+  font-weight: bold;
+}
 /* line 16, ../sass/_invoice.scss */
+.invoice-data-list .currency-code {
+  font-weight: bold;
+  color: #999;
+}
+
+/* line 23, ../sass/_invoice.scss */
 .pagestyle {
   border-top: 1px solid #CCC;
   border-left: solid 1px #CCC;
@@ -707,12 +720,12 @@ ul.flashes {
   width: 730px;
 }
 
-/* line 28, ../sass/_invoice.scss */
+/* line 35, ../sass/_invoice.scss */
 .draft .pagestyle {
   padding-right: 1.75cm !important;
 }
 
-/* line 32, ../sass/_invoice.scss */
+/* line 39, ../sass/_invoice.scss */
 .pagestyle:after {
   content: ".";
   display: block;
@@ -722,22 +735,22 @@ ul.flashes {
   height: 0;
 }
 
-/* line 41, ../sass/_invoice.scss */
+/* line 48, ../sass/_invoice.scss */
 html[xmlns] .pagestyle {
   display: block;
 }
 
-/* line 45, ../sass/_invoice.scss */
+/* line 52, ../sass/_invoice.scss */
 .pagestyle img {
   border: none;
 }
 
-/* line 49, ../sass/_invoice.scss */
+/* line 56, ../sass/_invoice.scss */
 #invoice {
   display: block;
   margin: 2em auto;
 }
-/* line 53, ../sass/_invoice.scss */
+/* line 60, ../sass/_invoice.scss */
 #invoice .item-controls {
   position: absolute;
   right: 10px;
@@ -850,6 +863,17 @@ html[xmlns] .pagestyle {
 #facebox .content {
   padding: 1em;
   background-color: #fff;
+}
+
+/* line 2, ../sass/_dashboard.scss */
+.dashboard {
+  padding: 5px;
+  margin-top: 1em;
+}
+/* line 8, ../sass/_dashboard.scss */
+.dashboard .invoice-states li {
+  font-size: 1.5em;
+  line-height: 1.333em;
 }
 
 /* line 1, ../sass/invoice_themes/_default.scss */
@@ -1270,7 +1294,7 @@ html[xmlns] .pagestyle {
   position: absolute;
 }
 
-/* line 23, ../sass/screen.scss */
+/* line 24, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 960px;
