--- a/nano/static/css/nano/sass/_dashboard.scss
+++ b/nano/static/css/nano/sass/_dashboard.scss
@@ -3,10 +3,26 @@
   padding: 5px;
   margin-top: 1em;
 
+  .card {
+    background-color: #fff;
+    padding: 1em;
+    @include border-radius(5px);
+    margin-top: 1em;
+  }
 
-  .invoice-states {
+  ul#stats {
+    @include span-columns(3, 12);
     li {
       @include adjust-font-size-to(18px);
+      span {
+        position: relative;
+        display: inline-block;
+        float: right;
+      }
     }
+  }
+
+  .end {
+    @include pie-clearfix;
   }
 }
