reorganized settings into its own modul

--- a/nano/static/css/nano/sass/_forms.scss
+++ b/nano/static/css/nano/sass/_forms.scss
@@ -151,3 +151,13 @@ form.create.client {
     width: 100px;
   }
 }
+
+form.create.custom-field {
+  .vspacer {
+    height: 16px;
+  }
+
+  input[type='text'] {
+    width: 200px;
+  }
+}
