--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -152,23 +152,47 @@ h1 {
 }
 
 /* line 68, ../sass/_shared.scss */
+.subnav {
+  background-color: #efefef;
+}
+/* line 71, ../sass/_shared.scss */
+.subnav ul li {
+  display: inline-block;
+  padding: 8px;
+}
+/* line 74, ../sass/_shared.scss */
+.subnav ul li a {
+  text-decoration: none;
+  color: #777777;
+  text-shadow: 0 1px 0 #fff;
+}
+/* line 81, ../sass/_shared.scss */
+.subnav ul {
+  border-bottom: 1px solid #ccc;
+}
+/* line 85, ../sass/_shared.scss */
+.subnav ul li.active {
+  font-weight: bold;
+}
+
+/* line 90, ../sass/_shared.scss */
 .first-create {
   margin: 50px auto;
   display: block;
   text-align: center;
 }
 
-/* line 77, ../sass/_shared.scss */
+/* line 99, ../sass/_shared.scss */
 .data-list-wrapper {
   margin: 10px;
 }
-/* line 80, ../sass/_shared.scss */
+/* line 102, ../sass/_shared.scss */
 .data-list-wrapper .col {
   display: table-cell;
   text-align: left;
 }
 
-/* line 86, ../sass/_shared.scss */
+/* line 108, ../sass/_shared.scss */
 .data-list-header {
   -moz-border-bottom-colors: none;
   -moz-border-left-colors: none;
@@ -189,14 +213,14 @@ h1 {
   font-size: 12px;
 }
 
-/* line 91, ../sass/_shared.scss */
+/* line 113, ../sass/_shared.scss */
 .data-list {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #aaaaaa;
 }
-/* line 96, ../sass/_shared.scss */
+/* line 118, ../sass/_shared.scss */
 .data-list .row {
   background-color: #fff;
   border-bottom: 1px solid #ececec;
@@ -204,21 +228,21 @@ h1 {
   font-size: 12px;
   cursor: pointer;
 }
-/* line 104, ../sass/_shared.scss */
+/* line 126, ../sass/_shared.scss */
 .data-list .row:hover {
   background-color: #ececec;
 }
-/* line 108, ../sass/_shared.scss */
+/* line 130, ../sass/_shared.scss */
 .data-list .row:last-child {
   border-bottom: none;
 }
 
-/* line 113, ../sass/_shared.scss */
+/* line 135, ../sass/_shared.scss */
 .label {
   border-radius: 3px 3px 3px 3px;
 }
 
-/* line 117, ../sass/_shared.scss */
+/* line 139, ../sass/_shared.scss */
 .label {
   background-color: #999999;
   color: #FFFFFF;
@@ -230,17 +254,17 @@ h1 {
   white-space: nowrap;
 }
 
-/* line 128, ../sass/_shared.scss */
+/* line 150, ../sass/_shared.scss */
 .label-success, .label-paid {
   background-color: #468847;
 }
 
-/* line 132, ../sass/_shared.scss */
+/* line 154, ../sass/_shared.scss */
 .label-important, .label-overdue {
   background-color: #B94A48;
 }
 
-/* line 136, ../sass/_shared.scss */
+/* line 158, ../sass/_shared.scss */
 .label-info, .label-sent {
   background-color: #3A87AD;
 }
@@ -678,6 +702,15 @@ form.create.client select#country, form.create.client div#s2id_country {
 /* line 150, ../sass/_forms.scss */
 form.create.client input#post_code {
   width: 100px;
+}
+
+/* line 156, ../sass/_forms.scss */
+form.create.custom-field .vspacer {
+  height: 16px;
+}
+/* line 160, ../sass/_forms.scss */
+form.create.custom-field input[type='text'] {
+  width: 200px;
 }
 
 /* line 1, ../sass/_flash.scss */
