--- a/nano/templates/account/_filter.html
+++ b/nano/templates/account/_filter.html
@@ -1,8 +1,8 @@
 <div class="filters">
   <div class="left">
-    <a href="{{ url_for('.index') }}"><img src="/static/img/contact_card_icon&16.png"> Your account</a>
-    <a href="{{ url_for('.business') }}"><img src="/static/img/cube_icon&16.png" /> Business profile</a>
-    <a href="{{ url_for('.settings') }}"><img src="/static/img/cog_icon&16.png" /> Settings</a>
+    <a href="{{ url_for('account.index') }}"><img src="/static/img/contact_card_icon&16.png"> Your account</a>
+    <a href="{{ url_for('account.business') }}"><img src="/static/img/cube_icon&16.png" /> Business profile</a>
+    <a href="{{ url_for('settings.index') }}"><img src="/static/img/cog_icon&16.png" /> Settings</a>
   </div>
   <div class="right">
   </div>
