--- a/nano/templates/settings/index.html
+++ b/nano/templates/settings/index.html
@@ -1,11 +1,12 @@
-{% from "macros/_misc.html" import render_input, render_action %}
+{% from "macros/_misc.html" import render_input %}
 {% extends 'layout.html' %}
 
 {% block content %}
   {% include 'account/_filter.html' %}
+  {% include 'settings/_subnav.html' %}
 
   <div class="workspace-inner">
-
+    
   </div>
 
 {% endblock %}
