--- a/nano/static/css/nano/sass/_dashboard.scss
+++ b/nano/static/css/nano/sass/_dashboard.scss
@@ -7,6 +7,8 @@
     background-color: #fff;
     padding: 1em;
     @include border-radius(5px);
+    @include box-shadow(0px 0px 2px #ccc); 
+    border: 1px solid #aaa;
     margin-top: 1em;
   }
 
