--- a/nano/static/css/nano/sass/_shared.scss
+++ b/nano/static/css/nano/sass/_shared.scss
@@ -147,6 +147,11 @@ h1 {
   white-space: nowrap;
 }
 
+.label-count {
+  background-color: #ccc;
+  color: #fff;
+}
+
 .label-success, .label-paid {
   background-color: #468847;
 }
