--- a/nano/templates/home/dashboard.html
+++ b/nano/templates/home/dashboard.html
@@ -10,10 +10,10 @@
       </div>
       
       <ul id='stats' class='card'>
-        <li>Due:  <span>{{ sent|length }}</span></li>
-        <li>Draft: <span>{{ send|length }}</span></li>
-        <li>Overdue: <span>{{ overdue|length }}</span></li>
-        <li>Paid: <span>0</span></li>
+        <li>Due:  <span class='label label-count'>{{ sent|length }}</span></li>
+        <li>Draft: <span class='label label-count'>{{ send|length }}</span></li>
+        <li>Overdue: <span class='label label-count'>{{ overdue|length }}</span></li>
+        <li>Paid: <span class='label label-count'>0</span></li>
       </ul>
       
 
