--- a/nano/templates/invoice/pdf.html
+++ b/nano/templates/invoice/pdf.html
@@ -42,6 +42,9 @@
             {% include 'invoice/_footer.html' %}
           </tfoot>
         </table>
+
+        {% include 'invoice/_other.html' %}
+
         <div class="clearfix"></div>
       </div>
     </div>
