--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -44,8 +44,8 @@
             {% include 'invoice/_footer.html' %}
           </tfoot>
         </table>
-      
-        
+
+        {% include 'invoice/_other.html' %}
 
         <div class="clearfix"></div>
       </div>
