--- a/nano/templates/settings/_subnav.html
+++ b/nano/templates/settings/_subnav.html
@@ -4,6 +4,6 @@
     <li class='{{ 'active' if request.endpoint == 'settings.index' }}'><a href="{{ url_for('.index') }}">General</a></li>
     <li class='{{ 'active' if request.endpoint == 'settings.custom_fields' }}'><a href="{{ url_for('.custom_fields') }}">Custom fields</a></li>
     <li class='{{ 'active' if request.endpoint == 'settings.payment' }}'><a href="#">Payment integration</a></li>
-    <li class='{{ 'active' if request.endpoint == 'settings.tax_rate' }}'><a href="#">Tax rates</a></li>
+    <li class='{{ 'active' if request.endpoint == 'settings.tax_rates' }}'><a href="{{ url_for('.tax_rates') }}">Taxes</a></li>
   </ul>
 </div>
