--- a/nano/static/css/nano/sass/_dashboard.scss
+++ b/nano/static/css/nano/sass/_dashboard.scss
@@ -1,19 +1,31 @@
 
 .dashboard {
-  padding: 5px;
   margin-top: 1em;
   
+  #graph {
+    margin: 0.5em;
+  }
+
+  .row {
+    @include container;
+    margin-top: 10px;
+  }
+
   .card {
     background-color: #fff;
     padding: 1em;
     @include border-radius(5px);
     @include box-shadow(0px 0px 2px #ccc); 
     border: 1px solid #aaa;
-    margin-top: 1em;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  .span3 {
+    @include span-columns(4, 12);
   }
 
   ul#stats {
-    @include span-columns(3, 12);
     li {
       font-size: 14px;
       display: block;
@@ -30,3 +42,4 @@
     @include pie-clearfix;
   }
 }
+
