--- a/nano/templates/client/show.html
+++ b/nano/templates/client/show.html
@@ -32,7 +32,9 @@
         {{ render_input(form.post_code) }}
         
         <div class="field">
-          <button class="button normal" type="submit">Submit</button>
+          <button class="button normal" type="submit">Update</button>
+
+          <a class="button danger move-right" type="button" href="{{ url_for('.delete', id=contact.id) }}">Delete</a>
         </div>
 
       </div>
