--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -65,6 +65,81 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* -------------------------------------------------------------------------*/
 /* Layout */
+/* line 1, ../sass/vendor/_facebox.scss */
+#facebox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  text-align: left;
+}
+
+/* line 9, ../sass/vendor/_facebox.scss */
+#facebox .popup {
+  position: relative;
+}
+
+/* line 13, ../sass/vendor/_facebox.scss */
+#facebox .content-wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  display: table;
+}
+
+/* line 19, ../sass/vendor/_facebox.scss */
+#facebox .close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 2px;
+}
+
+/* line 25, ../sass/vendor/_facebox.scss */
+#facebox .close img {
+  opacity: 0.3;
+}
+
+/* line 28, ../sass/vendor/_facebox.scss */
+#facebox .close:hover img {
+  opacity: 1.0;
+}
+
+/* line 32, ../sass/vendor/_facebox.scss */
+#facebox .loading {
+  text-align: center;
+}
+
+/* line 36, ../sass/vendor/_facebox.scss */
+#facebox .image {
+  text-align: center;
+}
+
+/* line 40, ../sass/vendor/_facebox.scss */
+#facebox_overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+/* line 48, ../sass/vendor/_facebox.scss */
+.facebox_hide {
+  z-index: -100;
+}
+
+/* line 52, ../sass/vendor/_facebox.scss */
+.facebox_overlayBG {
+  z-index: 99;
+  background: radial-gradient(ellipse closest-corner at 50% 50%, rgba(0, 0, 0, 0.3) 1%, rgba(0, 0, 0, 0.624) 100%) repeat scroll 0 0 transparent;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+}
+
 /* line 2, ../sass/_shared.scss */
 a img {
   vertical-align: middle;
@@ -79,7 +154,12 @@ h1 {
   font-weight: 900;
 }
 
-/* line 14, ../sass/_shared.scss */
+/* line 13, ../sass/_shared.scss */
+.move-right {
+  float: right;
+}
+
+/* line 18, ../sass/_shared.scss */
 .sidebar h3 {
   text-shadow: 0 1px white;
   font-size: 1em;
@@ -89,12 +169,12 @@ h1 {
   text-transform: uppercase;
   margin: 20px 0 2px 12px;
 }
-/* line 22, ../sass/_shared.scss */
+/* line 26, ../sass/_shared.scss */
 .sidebar ul.menu li {
   display: block;
   margin: 0px 0 2px 12px;
 }
-/* line 25, ../sass/_shared.scss */
+/* line 29, ../sass/_shared.scss */
 .sidebar ul.menu li a {
   display: block;
   text-decoration: none;
@@ -102,7 +182,7 @@ h1 {
   padding: 5px 12px;
 }
 
-/* line 34, ../sass/_shared.scss */
+/* line 38, ../sass/_shared.scss */
 .filters {
   *zoom: 1;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(5%, #efefef), color-stop(100%, #d9d9d9));
@@ -121,7 +201,7 @@ h1 {
   display: table;
   clear: both;
 }
-/* line 42, ../sass/_shared.scss */
+/* line 46, ../sass/_shared.scss */
 .filters a {
   text-decoration: none;
   color: #555555;
@@ -133,75 +213,80 @@ h1 {
   -o-border-radius: 20px;
   border-radius: 20px;
 }
-/* line 49, ../sass/_shared.scss */
+/* line 53, ../sass/_shared.scss */
 .filters a img {
   vertical-align: middle;
   margin-bottom: 3px;
 }
-/* line 55, ../sass/_shared.scss */
+/* line 59, ../sass/_shared.scss */
 .filters a:hover {
   background-color: #ccc;
 }
-/* line 59, ../sass/_shared.scss */
+/* line 63, ../sass/_shared.scss */
 .filters .left {
   float: left;
 }
-/* line 63, ../sass/_shared.scss */
+/* line 67, ../sass/_shared.scss */
 .filters .right {
   float: right;
 }
 
-/* line 68, ../sass/_shared.scss */
+/* line 72, ../sass/_shared.scss */
 .subnav {
   background-color: #efefef;
 }
-/* line 71, ../sass/_shared.scss */
+/* line 75, ../sass/_shared.scss */
 .subnav ul li {
   display: inline-block;
   padding: 8px;
 }
-/* line 74, ../sass/_shared.scss */
+/* line 78, ../sass/_shared.scss */
 .subnav ul li a {
   text-decoration: none;
   color: #777777;
   text-shadow: 0 1px 0 #fff;
 }
-/* line 81, ../sass/_shared.scss */
+/* line 85, ../sass/_shared.scss */
 .subnav ul {
   border-bottom: 1px solid #ccc;
 }
-/* line 85, ../sass/_shared.scss */
+/* line 89, ../sass/_shared.scss */
 .subnav ul li.active {
   font-weight: bold;
 }
 
-/* line 90, ../sass/_shared.scss */
+/* line 94, ../sass/_shared.scss */
 .first-create {
   margin: 50px auto;
   display: block;
   text-align: center;
 }
 
-/* line 99, ../sass/_shared.scss */
+/* line 103, ../sass/_shared.scss */
 .data-list-wrapper {
   margin: 10px;
 }
-/* line 102, ../sass/_shared.scss */
+/* line 106, ../sass/_shared.scss */
 .data-list-wrapper .col {
   display: table-cell;
   text-align: left;
 }
 
-/* line 108, ../sass/_shared.scss */
+/* line 112, ../sass/_shared.scss */
 .data-list-header {
   -moz-border-bottom-colors: none;
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
   background-color: #ECECED;
-  background-image: -moz-linear-gradient(center top, #f7f8f8, #dbdbdc);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f7f8f8), color-stop(100%, #dbdbdc));
+  background-image: -webkit-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -moz-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -o-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -ms-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
   background-repeat: repeat-x;
-  border-color: #AAAAAA #AAAAAA -moz-use-text-color;
+  border-color: #AAAAAA;
   border-image: none;
   border-radius: 4px 4px 0 0;
   border-style: solid solid none;
@@ -213,36 +298,37 @@ h1 {
   font-size: 12px;
 }
 
-/* line 113, ../sass/_shared.scss */
+/* line 117, ../sass/_shared.scss */
 .data-list {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #aaaaaa;
 }
-/* line 118, ../sass/_shared.scss */
+/* line 122, ../sass/_shared.scss */
 .data-list .row {
   background-color: #fff;
   border-bottom: 1px solid #ececec;
   padding: 8px;
   font-size: 12px;
   cursor: pointer;
+  margin-left: 0px;
 }
-/* line 126, ../sass/_shared.scss */
+/* line 131, ../sass/_shared.scss */
 .data-list .row:hover {
   background-color: #ececec;
 }
-/* line 130, ../sass/_shared.scss */
+/* line 135, ../sass/_shared.scss */
 .data-list .row:last-child {
   border-bottom: none;
 }
 
-/* line 135, ../sass/_shared.scss */
+/* line 140, ../sass/_shared.scss */
 .label {
   border-radius: 3px 3px 3px 3px;
 }
 
-/* line 139, ../sass/_shared.scss */
+/* line 144, ../sass/_shared.scss */
 .label {
   background-color: #999999;
   color: #FFFFFF;
@@ -254,23 +340,23 @@ h1 {
   white-space: nowrap;
 }
 
-/* line 150, ../sass/_shared.scss */
+/* line 155, ../sass/_shared.scss */
 .label-count {
   background-color: #ccc;
   color: #fff;
 }
 
-/* line 155, ../sass/_shared.scss */
+/* line 160, ../sass/_shared.scss */
 .label-success, .label-paid {
   background-color: #468847;
 }
 
-/* line 159, ../sass/_shared.scss */
+/* line 164, ../sass/_shared.scss */
 .label-important, .label-overdue {
   background-color: #B94A48;
 }
 
-/* line 163, ../sass/_shared.scss */
+/* line 168, ../sass/_shared.scss */
 .label-info, .label-sent {
   background-color: #3A87AD;
 }
@@ -480,9 +566,13 @@ body, html {
 }
 /* line 28, ../sass/_buttons.scss */
 .button.normal {
-  -moz-user-select: none;
   background-color: #F1F4F9;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f7faff), color-stop(100%, #e8ebf0));
+  background-image: -webkit-linear-gradient(center top, #f7faff, #e8ebf0);
   background-image: -moz-linear-gradient(center top, #f7faff, #e8ebf0);
+  background-image: -o-linear-gradient(center top, #f7faff, #e8ebf0);
+  background-image: -ms-linear-gradient(center top, #f7faff, #e8ebf0);
+  background-image: linear-gradient(center top, #f7faff, #e8ebf0);
   background-repeat: repeat-x;
   border: 1px solid #B1BCCA;
   border-radius: 3px 3px 3px 3px;
@@ -497,19 +587,45 @@ body, html {
   vertical-align: top;
   text-decoration: none;
 }
-/* line 47, ../sass/_buttons.scss */
+/* line 46, ../sass/_buttons.scss */
 .button.normal:active {
   outline: none;
   background-color: #E2E5EC;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dde0e7), color-stop(100%, #e9ecf3));
+  background-image: -webkit-linear-gradient(center top, #dde0e7, #e9ecf3);
   background-image: -moz-linear-gradient(center top, #dde0e7, #e9ecf3);
+  background-image: -o-linear-gradient(center top, #dde0e7, #e9ecf3);
+  background-image: -ms-linear-gradient(center top, #dde0e7, #e9ecf3);
+  background-image: linear-gradient(center top, #dde0e7, #e9ecf3);
   background-repeat: repeat-x;
   border-color: #CCD0DA;
   box-shadow: 0 1px 3px rgba(96, 101, 124, 0.1) inset, 0 1px 0 white;
   color: #5C627F;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
 }
+/* line 58, ../sass/_buttons.scss */
+.button.danger {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ee5f5b), color-stop(100%, #bd362f));
+  background-image: -webkit-linear-gradient(center top, #ee5f5b, #bd362f);
+  background-image: -moz-linear-gradient(center top, #ee5f5b, #bd362f);
+  background-image: -o-linear-gradient(center top, #ee5f5b, #bd362f);
+  background-image: -ms-linear-gradient(center top, #ee5f5b, #bd362f);
+  background-image: linear-gradient(center top, #ee5f5b, #bd362f);
+  background-repeat: repeat-x;
+  border-radius: 3px 3px 3px 3px;
+  border: 1px solid #ee5f5b;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: proxima-nova,sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 8px 16px;
+  vertical-align: top;
+  text-decoration: none;
+}
 
-/* line 59, ../sass/_buttons.scss */
+/* line 76, ../sass/_buttons.scss */
 a.btn-small {
   font-size: 0.833em;
   line-height: 2.4em;
@@ -536,7 +652,7 @@ a.btn-small {
   text-decoration: none !important;
   color: #666;
 }
-/* line 78, ../sass/_buttons.scss */
+/* line 95, ../sass/_buttons.scss */
 a.btn-small:hover {
   cursor: pointer;
 }
@@ -655,7 +771,12 @@ form.create select {
 /* line 106, ../sass/_forms.scss */
 form.create .fields {
   padding: 1em;
-  background: -moz-linear-gradient(center top, white, #f5f4f4) repeat-x scroll 0 0 #fbfbfb;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #f5f4f4));
+  background-image: -webkit-linear-gradient(center top, #ffffff, #f5f4f4 100%);
+  background-image: -moz-linear-gradient(center top, #ffffff, #f5f4f4 100%);
+  background-image: -o-linear-gradient(center top, #ffffff, #f5f4f4 100%);
+  background-image: -ms-linear-gradient(center top, #ffffff, #f5f4f4 100%);
+  background-image: linear-gradient(center top, #ffffff, #f5f4f4 100%);
   border: 1px solid #AAAAAA;
   border-radius: 0 0 4px 4px;
   margin: 0 auto 12px;
@@ -671,9 +792,14 @@ form.create .header {
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
   background-color: #ECECED;
-  background-image: -moz-linear-gradient(center top, #f7f8f8, #dbdbdc);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f7f8f8), color-stop(100%, #dbdbdc));
+  background-image: -webkit-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -moz-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -o-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: -ms-linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
+  background-image: linear-gradient(center top, #f7f8f8, #dbdbdc 100%);
   background-repeat: repeat-x;
-  border-color: #AAAAAA #AAAAAA -moz-use-text-color;
+  border-color: #AAAAAA;
   border-image: none;
   border-radius: 4px 4px 0 0;
   border-style: solid solid none;
@@ -957,7 +1083,7 @@ html[xmlns] .pagestyle {
   margin-bottom: 3px;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);
 }
-/* line 73, ../sass/_popup.scss */
+/* line 72, ../sass/_popup.scss */
 #facebox .content {
   padding: 1em;
   background-color: #fff;
@@ -1348,82 +1474,7 @@ html[xmlns] .pagestyle {
   text-align: center;
 }
 
-/* line 1, ../sass/vendor/_facebox.scss */
-#facebox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  text-align: left;
-}
-
-/* line 9, ../sass/vendor/_facebox.scss */
-#facebox .popup {
-  position: relative;
-}
-
-/* line 13, ../sass/vendor/_facebox.scss */
-#facebox .content-wrapper {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  display: table;
-}
-
-/* line 19, ../sass/vendor/_facebox.scss */
-#facebox .close {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  padding: 2px;
-}
-
-/* line 25, ../sass/vendor/_facebox.scss */
-#facebox .close img {
-  opacity: 0.3;
-}
-
-/* line 28, ../sass/vendor/_facebox.scss */
-#facebox .close:hover img {
-  opacity: 1.0;
-}
-
-/* line 32, ../sass/vendor/_facebox.scss */
-#facebox .loading {
-  text-align: center;
-}
-
-/* line 36, ../sass/vendor/_facebox.scss */
-#facebox .image {
-  text-align: center;
-}
-
-/* line 40, ../sass/vendor/_facebox.scss */
-#facebox_overlay {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-}
-
-/* line 48, ../sass/vendor/_facebox.scss */
-.facebox_hide {
-  z-index: -100;
-}
-
-/* line 52, ../sass/vendor/_facebox.scss */
-.facebox_overlayBG {
-  z-index: 99;
-  background: radial-gradient(ellipse closest-corner at 50% 50%, rgba(0, 0, 0, 0.3) 1%, rgba(0, 0, 0, 0.624) 100%) repeat scroll 0 0 transparent;
-  height: 100%;
-  overflow: hidden;
-  pointer-events: none;
-  position: absolute;
-}
-
-/* line 24, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 960px;
