--- a/nano/templates/home/dashboard.html
+++ b/nano/templates/home/dashboard.html
@@ -12,10 +12,10 @@
       <div class='row'>
         <div class='span3'>
           <ul id='stats' class='card'>
-            <li>Due:  <span class='label label-count'>{{ sent|length }}</span></li>
+            <li>Created:  <span class='label label-count label-sent'>{{ sent|length }}</span></li>
             <li>Draft: <span class='label label-count'>{{ send|length }}</span></li>
-            <li>Overdue: <span class='label label-count'>{{ overdue|length }}</span></li>
-            <li>Paid: <span class='label label-count'>0</span></li>
+            <li>Overdue: <span class='label label-count label-overdue'>{{ overdue|length }}</span></li>
+            <li>Paid: <span class='label label-count label-paid'>0</span></li>
           </ul>
         </div>
         
@@ -61,12 +61,12 @@
           }
         },
         legend: {
-          layout: 'vertical',
+          layout: 'horizontal',
           backgroundColor: '#FFFFFF',
           align: 'left',
           verticalAlign: 'top',
-          x: 634,
-          y: 0,
+          x: 530,
+          y: 10,
           floating: true,
           shadow: false 
         },
